--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -113,17 +113,17 @@
                 android:layout_marginHorizontal="5dp"
                 android:id="@+id/ago"
                 android:maxLines="2"/>
+
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:id="@+id/description"
+                android:maxLines="4"
+                android:ellipsize="marquee"
                 app:layout_constraintTop_toBottomOf="@+id/imageCard"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                android:layout_margin="10dp"
-                android:text="@string/dummyNews"
-                android:maxLines="4"
-                android:textColor="#FF232323"
-                android:id="@+id/description"/>
+                app:layout_constraintRight_toRightOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
