--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,20 +6,16 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_corona"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_coronavirus"
             android:title="Corona Tracker" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
+            android:id="@+id/nav_all"
+            android:icon="@drawable/all"
+            android:title="All" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:id="@+id/nav_vaccine"
+            android:icon="@drawable/vaccine"
+            android:title="Vaccine Tracker" />
 
-        <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Home" />
     </group>
 </menu>
