--- a/app/src/main/res/layout/item_vaccine.xml
+++ b/app/src/main/res/layout/item_vaccine.xml
@@ -35,7 +35,8 @@
         android:layout_height="wrap_content"
         app:cardCornerRadius="5dp"
         android:layout_margin="5dp"
-        app:cardElevation="0dp">
+        app:cardElevation="5dp"
+        android:id="@+id/phaseCard">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -51,7 +52,8 @@
         android:layout_height="wrap_content"
         app:cardCornerRadius="5dp"
         android:layout_margin="5dp"
-        app:cardElevation="5dp">
+        app:cardElevation="5dp"
+        android:id="@+id/nameCard">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -67,7 +69,8 @@
         android:layout_height="wrap_content"
         app:cardCornerRadius="5dp"
         android:layout_margin="5dp"
-        app:cardElevation="5dp">
+        app:cardElevation="5dp"
+        android:id="@+id/mechCard">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -83,7 +86,8 @@
         android:layout_height="wrap_content"
         app:cardCornerRadius="5dp"
         android:layout_margin="5dp"
-        app:cardElevation="5dp">
+        app:cardElevation="5dp"
+        android:id="@+id/sponCard">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -99,7 +103,8 @@
         android:layout_height="wrap_content"
         app:cardCornerRadius="5dp"
         android:layout_margin="5dp"
-        app:cardElevation="5dp">
+        app:cardElevation="5dp"
+        android:id="@+id/instCard">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -115,7 +120,8 @@
         android:layout_height="wrap_content"
         app:cardCornerRadius="5dp"
         android:layout_margin="5dp"
-        app:cardElevation="5dp">
+        app:cardElevation="5dp"
+        android:id="@+id/detailCard">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
