--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="materialGreen">#00c853</color>
     <color name="white">#ffffff</color>
     <color name="gray">#A9A9A9</color>
+    <color name="dullBlue">#37474F</color>
 </resources>
