--- a/app/src/main/res/layout/item_vaccine.xml
+++ b/app/src/main/res/layout/item_vaccine.xml
@@ -13,6 +13,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingVertical="5dp">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center_horizontal">
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -30,6 +35,25 @@
         android:layout_gravity="center"
         android:id="@+id/no"/>
     </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="7dp"
+            android:layout_margin="5dp"
+            app:cardElevation="5dp"
+            android:layout_gravity="center_horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2020/09/28"
+                android:padding="5dp"
+                android:textColor="@color/materialBlue"
+                android:textStyle="bold"
+                android:layout_gravity="center"
+                android:id="@+id/lastUpdate"/>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
