--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -17,6 +17,10 @@
             android:id="@+id/nav_all"
             android:icon="@drawable/all"
             android:title="All" />
+        <item
+            android:id="@+id/nav_sources"
+            android:icon="@drawable/ic_van"
+            android:title="News Channels" />
 
     </group>
 </menu>
