--- a/app/src/main/res/layout/fragment_category_news.xml
+++ b/app/src/main/res/layout/fragment_category_news.xml
@@ -22,7 +22,11 @@
             app:layout_scrollFlags="scroll|enterAlways"
             app:layout_constraintTop_toTopOf="parent" />
     </com.google.android.material.appbar.AppBarLayout>
-
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:id="@+id/swipeRefreshCN">
     <LinearLayout
         android:id="@+id/linearLayoutSource"
         android:layout_width="match_parent"
@@ -38,4 +42,5 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             />
     </LinearLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
